<resources>
    <string name="app_name">Viagens</string>
    <string name="specials">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="banner_cabecalho">Banner do cabeçalho</string>
    <string name="foto_local">Foto do local</string>
    <string name="final_price">Preço final:</string>
    <string name="region">imagem da regiao</string>
    <string name="pay">Realizar Pagamento</string>
    <string name="texto_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="val_compra">Valor da compra:</string>
    <string name="num_cartao">Número do cartão</string>
    <string name="validade_cartao_mes">MM</string>
    <string name="validade_cartao_ano">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_titular_cartao">Nome do titular</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="caracteres_aceitos_nome_cartao">abcçdefghijklmnopqrstuvwxyzABCÇDEFGHIJKLMNOPQRSTUVWXYZ\u0020</string>
    <string name="resumo_compra_titulo">Parabéns!</string>
    <string name="resumo_compra_texto">Compra realizada com sucesso :)</string>
    <string name="resumo_compra_texto_confira">Confira o resumo da compra:</string>
    <string name="foto_do_local_do_pacote">foto do local do pacote</string>
</resources>
