<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/pagamento_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/texto_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_texto_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/val_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_texto" />

    <TextView
        android:id="@+id/pagamento_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_texto_valor"
        tools:text="R$ 243,99" />

    <EditText
        android:id="@+id/pagamento_num_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/num_cartao"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor"
        android:maxLength="12" />

    <EditText
        android:id="@+id/pagamento_validade_cartao_mes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/validade_cartao_mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/pagamento_num_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_num_cartao"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_cvc_cartao"/>

    <EditText
        android:id="@+id/pagamento_validade_cartao_ano"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/validade_cartao_ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@+id/pagamento_validade_cartao_mes"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_num_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc_cartao"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/pagamento_num_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_num_cartao"/>

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/nome_titular_cartao"
        android:inputType="textPersonName"
        android:digits="@string/caracteres_aceitos_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_validade_cartao_mes"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc_cartao" />

    <Button
        android:id="@+id/pagamento_botao_finalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao"  />

</android.support.constraint.ConstraintLayout>