<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lista_pacotes_img_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark"
        android:contentDescription="@string/banner_cabecalho" />

    <TextView
        android:id="@+id/lista_pacotes_txt_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/specials"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/lista_pacotes_img_banner"
        app:layout_constraintTop_toTopOf="@+id/lista_pacotes_img_banner" />

    <TextView
        android:id="@+id/lista_pacotes_txt_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brasil"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_txt_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_txt_especiais" />
    
    <ListView
        android:id="@+id/lista_pacotes_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_img_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_pacote" />

</android.support.constraint.ConstraintLayout>